Ajustes testes unitários

--- a/.gitignore
+++ b/.gitignore
@@ -482,3 +482,11 @@ $RECYCLE.BIN/
 
 # Vim temporary swap files
 *.swp
+
+# Coverlet is a free, cross platform Code Coverage Tool
+coverage*.json
+coverage*.xml
+coverage*.info
+
+# Coverage report folder
+coverage-report/
